--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi (>=0.115.12,<0.116.0)",
-    "uvicorn[standard] (>=0.34.1,<0.35.0)"
+    "uvicorn[standard] (>=0.34.1,<0.35.0)",
+    "boto3[crt] (>=1.37.33,<2.0.0)",
+    "python-dotenv (>=1.1.0,<2.0.0)"
 ]
 
 
