--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,7 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+boto3-stubs = {extras = ["ec2", "s3", "sts"], version = "^1.37.33"}
+
