--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
     "sqlmodel (>=0.0.24,<0.0.25)",
     "motor (>=3.7.0,<4.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
-    "psycopg2 (>=2.9.10,<3.0.0)"
+    "psycopg2 (>=2.9.10,<3.0.0)",
+    "pytest (>=8.3.5,<9.0.0)",
+    "httpx (>=0.28.1,<0.29.0)"
 ]
 
 
